# null-browser

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.org  config.lua  flake.nix  init.lua  ldoc_json_filter.lua
assets/javascript/: finder.js  hints.js
doc/: index.html  symbols.json
docs/api/: index.html  symbols.json
docs/assets/: ldoc.css
include/: BrowserManager.hpp  CommandInput.hpp  CommandParser.hpp  Configuration.hpp  InputMediator.hpp  LuaRuntime.hpp  MainWindow.hpp  utils.hpp
include/completion/: Adapter.hpp  CommandsAdapter.hpp  CommandsModel.hpp  Completer.hpp  CompleterDelegate.hpp  FuzzySearchProxyModel.hpp  TabsAdapter.hpp  TabsModel.hpp  UrlAdapter.hpp  UrlModel.hpp
include/keymap/: KeySeqParser.hpp  KeymapEvaluator.hpp
include/widgets/: BrowserManager.hpp  CommandInput.hpp  InputLine.hpp  MainWindow.hpp  WebViewStack.hpp
lua/: api.lua
lua/null-browser/: api.lua  events.lua  inspect.lua  json.lua  stdlib.lua  test-utils.lua  utils.lua
lua/null-browser/defaults/: vi.lua
lua/null-browser/extras/: dmenu.lua  hints.lua  history.lua  html.lua  search-engines.lua  statusline.lua  system.lua  tabline.lua
nix/: libluv.nix
spec/: BrowserManagerSpec.cpp  BrowserWindowSpec.cpp  CommandInputSpec.cpp  InputLineSpec.cpp  InputMediatorSpec.cpp  KeySeqParserSpec.cpp  KeymapEvaluatorSpec.cpp  LuaRuntimeApiSpec.cpp  LuaRuntimeSpec.cpp  TestUtils.h  WebViewSpec.cpp  WebViewStackSpec.cpp  WindowActionRouterSpec.cpp  main.cpp  testUtils.cpp  testUtils.h
spec/lua/: dmenu_spec.lua  utils_spec.lua
src/: App.cpp  App.hpp  AsyncEventLoop.cpp  AsyncEventLoop.hpp  BrowserManager.cpp  CommandInput.cpp  CommandParser.cpp  CommandParser.hpp  Configuration.hpp  EventQueue.cpp  EventQueue.hpp  InputMediator.cpp  InputMediator.hpp  InstanceManager.cpp  InstanceManager.hpp  LuaRuntime.cpp  LuaRuntime.hpp  LuaRuntimeApi.hpp  MainWindow.cpp  WebViewData.hpp  WindowActionRouter.cpp  WindowActionRouter.hpp  WindowMediator.cpp  WindowMediator.hpp  events.hpp  main.cpp  play.cpp.old  utils.hpp
src/completion/: CommandsAdapter.cpp  CommandsModel.cpp  Completer.cpp  CompleterDelegate.cpp  FuzzySearchProxyModel.cpp  TabsAdapter.cpp  TabsModel.cpp  UrlAdapter.cpp  UrlModel.cpp
src/events/: Event.hpp  EventHandlerRequest.hpp  KeyPressedEvent.hpp  ModeChangedEvent.hpp  NotificationReceivedEvent.hpp  PermissionRequestedEvent.hpp  UrlChangedEvent.hpp  ViewClosedEvent.hpp  ViewCreatedEvent.hpp  ViewSelectedEvent.hpp  WinCreatedEvent.hpp
src/keymap/: KeySeqParser.cpp  KeySeqParser.hpp  KeymapEvaluator.cpp  KeymapEvaluator.hpp
src/schemes/: NullRpcSchemeHandler.cpp  NullRpcSchemeHandler.hpp  NullSchemeHandler.cpp  NullSchemeHandler.hpp  schemes.hpp
src/widgets/: BrowserApp.cpp  BrowserApp.hpp  BrowserManager.cpp  BrowserWindow.cpp  BrowserWindow.hpp  CommandInput.cpp  Decorations.cpp  Decorations.hpp  DevtoolsWindow.hpp  EdgeDecoration.cpp  EdgeDecoration.hpp  IWebViewMediator.hpp  InputLine.cpp  MainWindow.cpp  MainWindow.hpp  WebView.cpp  WebView.hpp  WebViewStack.cpp  WebViewStack.hpp
templates/: class.sh  qclass.sh  qtest.sh  qwidget.sh
